Added page border and images.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <head>
 
-            <title>Leyanne and David</title>
+            <title>D&L's Wedding</title>
 
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -14,46 +14,51 @@
 
         <body>
 
-            <nav>
-                <a class="hyperlink" href="#top"><h1>David &<br>Leyanne</h1></a>
-                <ul class="menu-list">
-                    <li class="menu-list-item"><a class="hyperlink" href="#story">Our Story</a></li>
-                    <!-- <li class="menu-list-item"><a class="hyperlink" href="gallery.html">Gallery</a></li> -->
-                    <li class="menu-list-item"><a class="hyperlink" href="#events">Events</a></li>
-                    <li class="menu-list-item"><a class="hyperlink" href="#party">Wedding Party</a></li>
-                    <li class="menu-list-item"><a class="hyperlink" href="#faq">FAQ</a></li>
-                    <li class="menu-list-item"><a class="hyperlink" href="#rsvp">RSVP</a></li>
-                    <li class="menu-list-item"><a class="hyperlink" target="_blank" href="https://www.zola.com/registry/markandlea2023">Registry</a></li>
-                </ul>
-            </nav>
+            <div class="content">
 
-            <div class="page">
+                <nav>
+                    <a class="hyperlink" href="#top"><h1>David &<br>Leyanne</h1></a>
+                    <ul class="menu-list">
+                        <li class="menu-list-item"><a class="hyperlink" href="#story">Our Story</a></li>
+                        <li class="menu-list-item"><a class="hyperlink" href="#events">Events</a></li>
+                        <li class="menu-list-item"><a class="hyperlink" href="#party">Wedding Party</a></li>
+                        <li class="menu-list-item"><a class="hyperlink" href="#faq">FAQ</a></li>
+                        <li class="menu-list-item"><a class="hyperlink" href="#rsvp">RSVP</a></li>
+                        <li class="menu-list-item"><a class="hyperlink" target="_blank" href="https://www.zola.com/registry/markandlea2023">Registry</a></li>
+                    </ul>
+                </nav>
 
-                <a id="top"></a> <h2>Our Wedding</h2>
+                <div class="page">
 
-                <a id="story"></a> <h2>Our Story</h2>
+                    <a id="top"></a> <h2>Our Wedding</h2>
 
-                <p>David and Leyanne crossed paths in April 2017. David had a crush on her but it wasn't until January 2019 that the spark between them ignited into a flame of romance. Through the ups and downs, navigating the challenges of a global pandemic and conquering the trials of a long-distance relationship while David pursued his master's in Florida, their love only grew stronger.</p>
+                    <a id="story"></a> <div class="line-box"><hr><h2>Our Story</h2></div>
 
-                <p>David and Leyanne have shared countless moments of joy, laughter, and adventure. From exploring new destinations during little trips together to trying different foods at new restaurants, each experience added a unique touch to their love story. Through the years, they found joy in the simple pleasure of life. Whether it was embarking on new adventures or enjoying quiet times of togetherness, the moments they spent together became priceless memories they will both cherish in their hearts.</p>
+                    <img class="inline" src="assets/shoot/404113245_6889113007852178_3231098228374073598_n copy-1.jpg">
 
-                <p>In November 2023, David asked Leyanne to be his forever, and with tears of joy and hearts full of love, they embraced the nex chapter of their story---an engagement that marked the beginning of a lifetime together. Through marriace, they will continue to grow in love, aspire to travel the world and experience new adventures, and go on to chase their dreams together.</p>
+                    <p>David and Leyanne crossed paths in April 2017. David had a crush on her but it wasn't until January 2019 that the spark between them ignited into a flame of romance. Through the ups and downs, navigating the challenges of a global pandemic and conquering the trials of a long-distance relationship while David pursued his master's in Florida, their love only grew stronger.</p>
 
-                <a id="events"></a> <h2>Events</h2>
+                    <p>David and Leyanne have shared countless moments of joy, laughter, and adventure. From exploring new destinations during little trips together to trying different foods at new restaurants, each experience added a unique touch to their love story. Through the years, they found joy in the simple pleasure of life. Whether it was embarking on new adventures or enjoying quiet times of togetherness, the moments they spent together became priceless memories they will both cherish in their hearts.</p>
 
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu non sodales neque sodales ut. Nulla pharetra diam sit amet nisl. Faucibus ornare suspendisse sed nisi lacus sed viverra. Magna fermentum iaculis eu non. Tellus pellentesque eu tincidunt tortor aliquam. Eget nulla facilisi etiam dignissim diam quis enim. Enim tortor at auctor urna nunc id cursus metus. Velit sed ullamcorper morbi tincidunt ornare. Volutpat diam ut venenatis tellus in metus vulputate eu scelerisque. Sit amet dictum sit amet. Nunc non blandit massa enim nec dui nunc.
+                    <p>In November 2023, David asked Leyanne to be his forever, and with tears of joy and hearts full of love, they embraced the next chapter of their story&mdash;an engagement that marked the beginning of a lifetime together. Through marriace, they will continue to grow in love, aspire to travel the world and experience new adventures, and go on to chase their dreams together.</p>
 
-                Amet tellus cras adipiscing enim eu turpis egestas. Sed id semper risus in hendrerit gravida rutrum quisque. Libero id faucibus nisl tincidunt eget nullam non nisi est. Nibh nisl condimentum id venenatis a condimentum vitae. Aliquam ultrices sagittis orci a. Augue neque gravida in fermentum et sollicitudin ac orci. Sodales ut etiam sit amet nisl purus. Odio pellentesque diam volutpat commodo sed egestas. Augue ut lectus arcu bibendum at. Quam quisque id diam vel quam elementum pulvinar etiam. Consectetur adipiscing elit pellentesque habitant morbi tristique senectus. Cursus eget nunc scelerisque viverra mauris. Non curabitur gravida arcu ac tortor dignissim. Risus in hendrerit gravida rutrum quisque non. Sed ullamcorper morbi tincidunt ornare massa eget. Pellentesque habitant morbi tristique senectus et netus et malesuada. Sed vulputate mi sit amet mauris commodo. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor.
+                    <a id="events"></a> <div class="line-box"><h2>Events</h2><hr></div>
 
-                <a id="party"></a> <h2>Wedding Party</h2>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu non sodales neque sodales ut. Nulla pharetra diam sit amet nisl. Faucibus ornare suspendisse sed nisi lacus sed viverra. Magna fermentum iaculis eu non. Tellus pellentesque eu tincidunt tortor aliquam. Eget nulla facilisi etiam dignissim diam quis enim. Enim tortor at auctor urna nunc id cursus metus. Velit sed ullamcorper morbi tincidunt ornare. Volutpat diam ut venenatis tellus in metus vulputate eu scelerisque. Sit amet dictum sit amet. Nunc non blandit massa enim nec dui nunc.
 
-                Arcu cursus euismod quis viverra nibh. Mauris nunc congue nisi vitae suscipit tellus mauris a diam. Cras adipiscing enim eu turpis egestas pretium aenean pharetra. Vulputate dignissim suspendisse in est ante in nibh mauris. Enim lobortis scelerisque fermentum dui. Aenean euismod elementum nisi quis eleifend quam adipiscing. Fermentum dui faucibus in ornare quam viverra orci. Lectus arcu bibendum at varius vel pharetra. Ornare quam viverra orci sagittis eu volutpat odio. Enim neque volutpat ac tincidunt. Et odio pellentesque diam volutpat commodo sed egestas. Sit amet volutpat consequat mauris nunc congue nisi vitae suscipit. Sem et tortor consequat id porta. Pellentesque habitant morbi tristique senectus et netus et. Hendrerit dolor magna eget est lorem. Ut faucibus pulvinar elementum integer enim. Sit amet nisl suscipit adipiscing bibendum est ultricies integer quis. Imperdiet proin fermentum leo vel. Amet consectetur adipiscing elit pellentesque. Vitae congue mauris rhoncus aenean.
+                    Amet tellus cras adipiscing enim eu turpis egestas. Sed id semper risus in hendrerit gravida rutrum quisque. Libero id faucibus nisl tincidunt eget nullam non nisi est. Nibh nisl condimentum id venenatis a condimentum vitae. Aliquam ultrices sagittis orci a. Augue neque gravida in fermentum et sollicitudin ac orci. Sodales ut etiam sit amet nisl purus. Odio pellentesque diam volutpat commodo sed egestas. Augue ut lectus arcu bibendum at. Quam quisque id diam vel quam elementum pulvinar etiam. Consectetur adipiscing elit pellentesque habitant morbi tristique senectus. Cursus eget nunc scelerisque viverra mauris. Non curabitur gravida arcu ac tortor dignissim. Risus in hendrerit gravida rutrum quisque non. Sed ullamcorper morbi tincidunt ornare massa eget. Pellentesque habitant morbi tristique senectus et netus et malesuada. Sed vulputate mi sit amet mauris commodo. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor.
 
-                Ultrices mi tempus imperdiet nulla malesuada pellentesque elit eget. Mus mauris vitae ultricies leo integer malesuada nunc. Egestas erat imperdiet sed euismod nisi porta. Non nisi est sit amet facilisis magna. Diam sit amet nisl suscipit adipiscing bibendum est ultricies integer. Cras tincidunt lobortis feugiat vivamus. Quisque id diam vel quam elementum. Arcu dictum varius duis at consectetur lorem donec. Sed risus ultricies tristique nulla. Ullamcorper eget nulla facilisi etiam.
+                    <a id="party"></a> <div class="line-box"><hr><h2>Wedding Party</h2></div>
 
-                Sagittis vitae et leo duis. Nibh praesent tristique magna sit amet purus gravida. Tincidunt dui ut ornare lectus sit amet est placerat in. Sed cras ornare arcu dui vivamus. Sit amet mattis vulputate enim. Purus semper eget duis at tellus at urna condimentum mattis. Felis bibendum ut tristique et egestas. Vitae congue mauris rhoncus aenean vel. At elementum eu facilisis sed odio morbi quis commodo. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Sem et tortor consequat id. Sapien faucibus et molestie ac feugiat sed. Aliquam faucibus purus in massa tempor. Egestas pretium aenean pharetra magna ac placerat. Accumsan sit amet nulla facilisi morbi tempus iaculis urna id. Non blandit massa enim nec dui nunc mattis. Tellus integer feugiat scelerisque varius morbi. Elementum sagittis vitae et leo. Augue lacus viverra vitae congue eu consequat.
+                    Arcu cursus euismod quis viverra nibh. Mauris nunc congue nisi vitae suscipit tellus mauris a diam. Cras adipiscing enim eu turpis egestas pretium aenean pharetra. Vulputate dignissim suspendisse in est ante in nibh mauris. Enim lobortis scelerisque fermentum dui. Aenean euismod elementum nisi quis eleifend quam adipiscing. Fermentum dui faucibus in ornare quam viverra orci. Lectus arcu bibendum at varius vel pharetra. Ornare quam viverra orci sagittis eu volutpat odio. Enim neque volutpat ac tincidunt. Et odio pellentesque diam volutpat commodo sed egestas. Sit amet volutpat consequat mauris nunc congue nisi vitae suscipit. Sem et tortor consequat id porta. Pellentesque habitant morbi tristique senectus et netus et. Hendrerit dolor magna eget est lorem. Ut faucibus pulvinar elementum integer enim. Sit amet nisl suscipit adipiscing bibendum est ultricies integer quis. Imperdiet proin fermentum leo vel. Amet consectetur adipiscing elit pellentesque. Vitae congue mauris rhoncus aenean.
 
-            </page>
+                    Ultrices mi tempus imperdiet nulla malesuada pellentesque elit eget. Mus mauris vitae ultricies leo integer malesuada nunc. Egestas erat imperdiet sed euismod nisi porta. Non nisi est sit amet facilisis magna. Diam sit amet nisl suscipit adipiscing bibendum est ultricies integer. Cras tincidunt lobortis feugiat vivamus. Quisque id diam vel quam elementum. Arcu dictum varius duis at consectetur lorem donec. Sed risus ultricies tristique nulla. Ullamcorper eget nulla facilisi etiam.
+
+                    Sagittis vitae et leo duis. Nibh praesent tristique magna sit amet purus gravida. Tincidunt dui ut ornare lectus sit amet est placerat in. Sed cras ornare arcu dui vivamus. Sit amet mattis vulputate enim. Purus semper eget duis at tellus at urna condimentum mattis. Felis bibendum ut tristique et egestas. Vitae congue mauris rhoncus aenean vel. At elementum eu facilisis sed odio morbi quis commodo. Lacus suspendisse faucibus interdum posuere lorem ipsum dolor sit amet. Sem et tortor consequat id. Sapien faucibus et molestie ac feugiat sed. Aliquam faucibus purus in massa tempor. Egestas pretium aenean pharetra magna ac placerat. Accumsan sit amet nulla facilisi morbi tempus iaculis urna id. Non blandit massa enim nec dui nunc mattis. Tellus integer feugiat scelerisque varius morbi. Elementum sagittis vitae et leo. Augue lacus viverra vitae congue eu consequat.
+
+                </div>
+
+            </div>
 
         </body>
 
