--- a/index.html
+++ b/index.html
@@ -26,9 +26,20 @@
                 </ul>
             </nav>
 
-            <div class="page">
+            <a id="top"></a> 
 
-                <a id="top"></a> <h2>Our Wedding</h2>
+            <div id="splash">
+
+                <div id="splash-container">
+
+                    <h2>The Wedding of</h2>
+                    <img id="splash-image" src="assets/shoot/DSC07886.jpeg">
+
+                </div>
+
+            </div>
+
+            <div class="page">
 
                 <a id="story"></a> <div class="line-box"><hr><h2>Our Story</h2></div>
 
