Added buttons for RSVP and registry.

--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
                     <table class="schedule">
                         <tr>
                             <td><span class="schedule-time">3:00<span class="superscript">pm</span></span></td>
-                            <td><h3>Ceremony</h3>All Saints Catholic Church<br>22824 2nd St<br>Hayward, CA 94541</td>
+                            <td><h3>Ceremony</h3>All Saints Catholic Church<br><a class="hyperlink" href="https://maps.app.goo.gl/z2rjavR3DwiL9t2C7">22824 2nd St<br>Hayward, CA 94541</a></td>
                         </tr>
                         <tr>
                             <td><span class="schedule-time">5:00<span class="superscript">pm</span></span></td>
-                            <td><h3>Cocktails</h3>Redwood Canyon<br>17007 Redwood Rd<br>Castro Valley, CA 94546</td>
+                            <td><h3>Cocktails</h3>Redwood Canyon<br><a class="hyperlink" href="https://maps.app.goo.gl/1eDNKBpugKXJdeDV7">17007 Redwood Rd<br>Castro Valley, CA 94546</a></td>
                         </tr>
                         <tr>
                             <td><span class="schedule-time">6:00<span class="superscript">pm</span></span></td>
-                            <td><h3>Couple's Entrance</h3>Please welcome the newly wedded couple and their bridal party!</td>
+                            <td><h3>Couple's Entrance</h3>Please welcome the newly wedded couple and their bridal party! Dinner to follow.</td>
                         </tr>
                         <tr>
                             <td><span class="schedule-time">10:00<span class="superscript">pm</span></span></td>
@@ -67,7 +67,23 @@
 
                 <a id="rsvp"></a> <div class="line-box"><h2>RSVP</h2><hr class="right"></div>
 
+                    <p>Please respond by 16 July 2024 using the form below and direct any inquiries to <a class="hyperlink" href="mailto:rsvp@davley2024.wedding">rsvp<span class="digit">@</span>davley2024.wedding</a></p>
+
+                    <div class="button-container">
+                        <form target="_blank">
+                            <button class="fill" type="submit" formaction="https://forms.google.com">Submit Your RSVP</button>
+                        </form>
+                    </div>
+
                 <a id="registry"></a> <div class="line-box"><hr class="left"><h2>Registry</h2></div>
+
+                    <p>Your presence at our wedding is the greatest gift we could ask for! If you would like to honor us with a gift, we have registered a list with [insert details].</p>
+
+                    <div class="button-container">
+                        <form target="_blank">
+                            <button class="fill" type="submit" formaction="https://zola.com">Gift Registry</button>
+                        </form>
+                    </div>
 
             </div>
 
