Added invites and profiles for entourage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,27 @@
 
                 <a id="entourage"></a> <div class="line-box"><h2>Entourage</h2><hr class="right"></div>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu non sodales neque sodales ut. Nulla pharetra diam sit amet nisl. Faucibus ornare suspendisse sed nisi lacus sed viverra. Magna fermentum iaculis eu non. Tellus pellentesque eu tincidunt tortor aliquam. Eget nulla facilisi etiam dignissim diam quis enim. Enim tortor at auctor urna nunc id cursus metus. Velit sed ullamcorper morbi tincidunt ornare. Volutpat diam ut venenatis tellus in metus vulputate eu scelerisque. Sit amet dictum sit amet. Nunc non blandit massa enim nec dui nunc.</p>
+                    <table class="entourage">
+                        <tr>
+                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                        <tr>
+                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                        </tr>                         <tr>
+                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                        </tr>                         <tr>
+                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                        </tr>                         <tr>
+                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                        </tr>                         <tr>
+                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                        </tr> 
+                    </table>
 
                 <a id="schedule"></a> <div class="line-box"><hr class="left"><h2>Schedule</h2></div>
 
