--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
                 
             <div id="portraits"></div>
 
+
+  <div class="menu-burger">
+    <input type="checkbox" />
+    <!-- `menu-2` icon of Tabler Icon Suite (https://tablericons.com/) licensed under MIT -->
+    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+      <line x1="4" y1="6" x2="20" y2="6" />
+      <line x1="4" y1="12" x2="20" y2="12" />
+      <line x1="4" y1="18" x2="20" y2="18" />
+    </svg>
+    <ul class="menu-burger__item-list">
+      <li><a class="hyperlink" href="#story">Story</a></li>
+      <li><a class="hyperlink" href="#entourage">Entourage</a></li>
+      <li><a class="hyperlink" href="#schedule">Schedule</a></li>
+      <li><a class="hyperlink" href="#rsvp">RSVP</a></li>
+      <li><a class="hyperlink" href="#registry">Registry</a></li>
+    </ul>
+  </div>
+
             <div id="splash">
 
                 <div id="splash-container">
