Autohide menu using js.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
   <div class="menu-burger">
-    <input type="checkbox" />
+    <input type="checkbox" id="animationToggle" />
     <!-- `menu-2` icon of Tabler Icon Suite (https://tablericons.com/) licensed under MIT -->
     <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
       <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -27,11 +27,11 @@
       <line x1="4" y1="18" x2="20" y2="18" />
     </svg>
     <ul class="menu-burger__item-list">
-      <li><a class="hyperlink" href="#story">Story</a></li>
-      <li><a class="hyperlink" href="#entourage">Entourage</a></li>
-      <li><a class="hyperlink" href="#schedule">Schedule</a></li>
-      <li><a class="hyperlink" href="#rsvp">RSVP</a></li>
-      <li><a class="hyperlink" href="#registry">Registry</a></li>
+      <li><a class="hyperlink" onclick="closeMenu()" href="#story">Our Story</a></li>
+      <li><a class="hyperlink" onclick="closeMenu()" href="#entourage">Entourage</a></li>
+      <li><a class="hyperlink" onclick="closeMenu()" href="#schedule">Schedule</a></li>
+      <li><a class="hyperlink" onclick="closeMenu()" href="#rsvp">RSVP</a></li>
+      <li><a class="hyperlink" onclick="closeMenu()" href="#registry">Registry</a></li>
     </ul>
   </div>
 
@@ -126,17 +126,22 @@
 
             </div>
 
-            <!-- <nav>
-                <a class="hyperlink" href="#top"><h1>David &<br>Leyanne</h1></a>
-                <ul class="menu-list">
-                    <li class="menu-list-item"><a class="hyperlink" href="#story">Our Story</a></li>
-                    <li class="menu-list-item"><a class="hyperlink" href="#events">Events</a></li>
-                    <li class="menu-list-item"><a class="hyperlink" href="#party">Wedding Party</a></li>
-                    <li class="menu-list-item"><a class="hyperlink" href="#faq">FAQ</a></li>
-                    <li class="menu-list-item"><a class="hyperlink" href="#rsvp">RSVP</a></li>
-                    <li class="menu-list-item"><a class="hyperlink" target="_blank" href="https://www.zola.com/registry/markandlea2023">Registry</a></li>
-                </ul>
-            </nav> -->
+    <script>
+        const animationToggle = document.getElementById('animationToggle');
+        const undoLinks = document.querySelectorAll('.hyperlink');
+        const animatedDiv = document.querySelector('.menu-burger__item-list');
+
+        animationToggle.addEventListener('change', () => {
+            animatedDiv.classList.toggle('animate', animationToggle.checked);
+        });
+
+        undoLinks.forEach(link => {
+            link.addEventListener('click', () => {
+                animatedDiv.classList.remove('animate');
+                animationToggle.checked = false;
+            });
+        });
+    </script>
                 
         </body>
 
