--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                 <a id="registry"></a> <div class="line-box"><hr class="left"><h2>Registry</h2></div>
 
-                    <p>Your presence at our wedding is the greatest gift we could ask for! If you would like to honor us with a gift, we have registered a list with [insert details].</p>
+                    <p>Your presence at our wedding is the greatest gift we could ask for. If you would like to honor us with a gift, we have registered a list with [insert details].</p>
 
                     <div class="button-container">
                         <form target="_blank">
