--- a/index.html
+++ b/index.html
@@ -13,27 +13,76 @@
         </head>
 
         <body>
-                
-            <div id="portraits"></div>
 
+        <div class="carousel">
+        <ul class="slides">
+          <input type="radio" name="radio-buttons" id="img-1" checked />
+          <li class="slide-container">
+            <div class="slide-image">
+              <img src="assets/shoot/DSC07887.JPEG">
+            </div>
+            <!-- <div class="carousel-controls">
+              <label for="img-3" class="prev-slide">
+                <span>&lsaquo;</span>
+              </label>
+              <label for="img-2" class="next-slide">
+                <span>&rsaquo;</span>
+              </label>
+            </div> -->
+          </li>
+          <input type="radio" name="radio-buttons" id="img-2" />
+          <li class="slide-container">
+            <div class="slide-image">
+              <img src="assets/shoot/DSC07908.JPEG">
+            </div>
+            <!-- <div class="carousel-controls">
+              <label for="img-1" class="prev-slide">
+                <span>&lsaquo;</span>
+              </label>
+              <label for="img-3" class="next-slide">
+                <span>&rsaquo;</span>
+              </label>
+            </div> -->
+          </li>
+          <input type="radio" name="radio-buttons" id="img-3" />
+          <li class="slide-container">
+            <div class="slide-image">
+              <img src="assets/shoot/DSC07829.JPEG">
+            </div>
+            <!-- <div class="carousel-controls">
+              <label for="img-2" class="prev-slide">
+                <span>&lsaquo;</span>
+              </label>
+              <label for="img-1" class="next-slide">
+                <span>&rsaquo;</span>
+              </label>
+            </div> -->
+          </li>
+          <div class="carousel-dots">
+            <label for="img-1" class="carousel-dot" id="img-dot-1"></label>
+            <label for="img-2" class="carousel-dot" id="img-dot-2"></label>
+            <label for="img-3" class="carousel-dot" id="img-dot-3"></label>
+          </div>
+        </ul>
+        </div>
 
-  <div class="menu-burger">
-    <input type="checkbox" id="animationToggle" />
-    <!-- `menu-2` icon of Tabler Icon Suite (https://tablericons.com/) licensed under MIT -->
-    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-      <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-      <line x1="4" y1="6" x2="20" y2="6" />
-      <line x1="4" y1="12" x2="20" y2="12" />
-      <line x1="4" y1="18" x2="20" y2="18" />
-    </svg>
-    <ul class="menu-burger__item-list">
-      <li><a class="hyperlink" onclick="closeMenu()" href="#story">Our Story</a></li>
-      <li><a class="hyperlink" onclick="closeMenu()" href="#entourage">Entourage</a></li>
-      <li><a class="hyperlink" onclick="closeMenu()" href="#schedule">Schedule</a></li>
-      <li><a class="hyperlink" onclick="closeMenu()" href="#rsvp">RSVP</a></li>
-      <li><a class="hyperlink" onclick="closeMenu()" href="#registry">Registry</a></li>
-    </ul>
-  </div>
+            <div class="menu-burger">
+            <input type="checkbox" id="animationToggle" />
+            <!-- `menu-2` icon of Tabler Icon Suite (https://tablericons.com/) licensed under MIT -->
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <line x1="4" y1="6" x2="20" y2="6" />
+              <line x1="4" y1="12" x2="20" y2="12" />
+              <line x1="4" y1="18" x2="20" y2="18" />
+            </svg>
+            <ul class="menu-burger__item-list">
+              <li><a class="hyperlink" onclick="closeMenu()" href="#story">Our Story</a></li>
+              <li><a class="hyperlink" onclick="closeMenu()" href="#entourage">Entourage</a></li>
+              <li><a class="hyperlink" onclick="closeMenu()" href="#schedule">Schedule</a></li>
+              <li><a class="hyperlink" onclick="closeMenu()" href="#rsvp">RSVP</a></li>
+              <li><a class="hyperlink" onclick="closeMenu()" href="#registry">Registry</a></li>
+            </ul>
+            </div>
 
             <div id="splash">
 
@@ -63,23 +112,23 @@
 
                     <table class="entourage">
                         <tr>
-                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
-                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
                         <tr>
-                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
-                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
                         </tr>                         <tr>
-                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
-                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
                         </tr>                         <tr>
-                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
-                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
                         </tr>                         <tr>
-                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
-                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
                         </tr>                         <tr>
-                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
-                            <td><div class="profile"><img src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
+                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
                         </tr> 
                     </table>
 
