--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
             <title>With Hearts Full of Joy</title>
 
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta property="og:image" content="assets/preview.JPEG">
+            <meta property="og:image:width" content="1200">
+            <meta property="og:image:height" content="1200">
+
 
             <link rel="stylesheet" type="text/css" href="main.css">
 
