Added profiles to wedding party.

--- a/index.html
+++ b/index.html
@@ -126,23 +126,20 @@
                     <table class="entourage">
                         <tr>
                             <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
+                            <td><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
+                        </tr>
+                        <tr>
+                            <td><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
                             <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
+                        </tr>
                         <tr>
                             <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
+                            <td><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
+                        </tr>
+                        <tr>
+                            <td><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
                             <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                        </tr>                         <tr>
-                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                        </tr>                         <tr>
-                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                        </tr>                         <tr>
-                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                        </tr>                         <tr>
-                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                        </tr> 
+                        </tr>
                     </table>
 
                 <a id="schedule"></a> <div class="line-box"><hr class="left"><h2>Schedule</h2></div>
