--- a/index.html
+++ b/index.html
@@ -22,57 +22,57 @@
 
         <body>
 
-        <div class="carousel">
-        <ul class="slides">
-          <input type="radio" name="radio-buttons" id="img-1" checked />
-          <li class="slide-container">
-            <div class="slide-image">
-              <img src="assets/shoot/DSC07887.JPEG">
+            <div class="carousel">
+            <ul class="slides">
+              <input type="radio" name="radio-buttons" id="img-1" checked />
+              <li class="slide-container">
+                <div class="slide-image">
+                  <img src="assets/shoot/DSC07887.JPEG">
+                </div>
+                <!-- <div class="carousel-controls">
+                  <label for="img-3" class="prev-slide">
+                    <span>&lsaquo;</span>
+                  </label>
+                  <label for="img-2" class="next-slide">
+                    <span>&rsaquo;</span>
+                  </label>
+                </div> -->
+              </li>
+              <input type="radio" name="radio-buttons" id="img-2" />
+              <li class="slide-container">
+                <div class="slide-image">
+                  <img src="assets/shoot/DSC07908.JPEG">
+                </div>
+                <!-- <div class="carousel-controls">
+                  <label for="img-1" class="prev-slide">
+                    <span>&lsaquo;</span>
+                  </label>
+                  <label for="img-3" class="next-slide">
+                    <span>&rsaquo;</span>
+                  </label>
+                </div> -->
+              </li>
+              <input type="radio" name="radio-buttons" id="img-3" />
+              <li class="slide-container">
+                <div class="slide-image">
+                  <img src="assets/shoot/DSC07829.JPEG">
+                </div>
+                <!-- <div class="carousel-controls">
+                  <label for="img-2" class="prev-slide">
+                    <span>&lsaquo;</span>
+                  </label>
+                  <label for="img-1" class="next-slide">
+                    <span>&rsaquo;</span>
+                  </label>
+                </div> -->
+              </li>
+              <div class="carousel-dots">
+                <label for="img-1" class="carousel-dot" id="img-dot-1"></label>
+                <label for="img-2" class="carousel-dot" id="img-dot-2"></label>
+                <label for="img-3" class="carousel-dot" id="img-dot-3"></label>
+              </div>
+            </ul>
             </div>
-            <!-- <div class="carousel-controls">
-              <label for="img-3" class="prev-slide">
-                <span>&lsaquo;</span>
-              </label>
-              <label for="img-2" class="next-slide">
-                <span>&rsaquo;</span>
-              </label>
-            </div> -->
-          </li>
-          <input type="radio" name="radio-buttons" id="img-2" />
-          <li class="slide-container">
-            <div class="slide-image">
-              <img src="assets/shoot/DSC07908.JPEG">
-            </div>
-            <!-- <div class="carousel-controls">
-              <label for="img-1" class="prev-slide">
-                <span>&lsaquo;</span>
-              </label>
-              <label for="img-3" class="next-slide">
-                <span>&rsaquo;</span>
-              </label>
-            </div> -->
-          </li>
-          <input type="radio" name="radio-buttons" id="img-3" />
-          <li class="slide-container">
-            <div class="slide-image">
-              <img src="assets/shoot/DSC07829.JPEG">
-            </div>
-            <!-- <div class="carousel-controls">
-              <label for="img-2" class="prev-slide">
-                <span>&lsaquo;</span>
-              </label>
-              <label for="img-1" class="next-slide">
-                <span>&rsaquo;</span>
-              </label>
-            </div> -->
-          </li>
-          <div class="carousel-dots">
-            <label for="img-1" class="carousel-dot" id="img-dot-1"></label>
-            <label for="img-2" class="carousel-dot" id="img-dot-2"></label>
-            <label for="img-3" class="carousel-dot" id="img-dot-3"></label>
-          </div>
-        </ul>
-        </div>
 
             <div class="menu-burger">
             <input type="checkbox" id="animationToggle" />
@@ -125,20 +125,14 @@
 
                     <table class="entourage">
                         <tr>
-                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                            <td><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
+                            <td class="profile"><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
+                            <td class="bio"><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
                         </tr>
+                    </table>
+                    <table class="entourage">
                         <tr>
-                            <td><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
-                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                        </tr>
-                        <tr>
-                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
-                            <td><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
-                        </tr>
-                        <tr>
-                            <td><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
-                            <td><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
+                            <td class="bio"><p><span class="profile-name">Michael Papa</span><br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p></td>
+                            <td class="profile"><div class="profile"><img alt="michael" src="assets/profiles/michael.jpg"></div></td>
                         </tr>
                     </table>
 
